--- a/HoloFab/HoloFab.csproj
+++ b/HoloFab/HoloFab.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>HoloFab</RootNamespace>
     <AssemblyName>HoloFab</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <TargetFrameworkProfile />
@@ -67,9 +67,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\Resources.Designer.cs">
-          <AutoGen>True</AutoGen>
-          <DesignTime>True</DesignTime>
-          <DependentUpon>Resources.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="General\Scripts\Network\FindServer.cs" />
@@ -94,6 +94,7 @@
     <Compile Include="Components\HoloFab_HoloBot.cs" />
     <Compile Include="Components\HoloFab_HoloBot_Streaming.cs" />
     <Compile Include="Components\HoloFab_HoloBot_Controller.cs" />
+	<Compile Include="Components\HoloFab_EnvironmentReceiver.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -128,6 +129,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\HoloFab_UIReceiver.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\HoloFab_Environment.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
