--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "HoloFab/General"]
 	path = HoloFab/General
-	url = https://github.com/HoloFab/HoloFab2-Split-General.git
+	url = git@github.com:HoloFab/HoloFab2-Split-General.git
